# biogames

./: README.md  game_flow.drawio  package-lock.json
biogames-api/: ._.env  ._import_cores.sh  ._psql.sh  ._target  .env  .gitignore  Cargo.toml  demo_database.sql  import_cores.sh  migrate_users.rs  migrate_users.sh  old_users.txt  psql.sh  run_test_mode.sh  run_with_specific_domains.sh  test_image_path.sh  users.txt
biogames-api/cert/: ._key.pem  cert.pem  key.pem
biogames-api/migrations/2024-03-21-000000_add_email_to_registered_users/: up.sql
biogames-api/migrations/2024-04-18-035143_create_her2cores/: down.sql  up.sql
biogames-api/migrations/2024-04-18-230231_add_game_entities/: down.sql  up.sql
biogames-api/migrations/2024-10-26-064900_game_type/: down.sql  up.sql
biogames-api/migrations/2024-10-30-000000_create_registered_users/: down.sql  up.sql
biogames-api/migrations/2024-10-31-000000_add_email_to_registered_users/: down.sql
biogames-api/migrations/2025-04-17-011939_add_username_to_registered_users/: down.sql  up.sql
biogames-api/migrations/2025-04-17-020520_migrate_users_from_txt/: down.sql  up.sql
biogames-api/migrations/2025-05-01-000000_create_email_registry/: down.sql  up.sql
biogames-api/migrations/2025-06-22-065336_add_user_id_to_games/: down.sql  up.sql
biogames-api/migrations/2026-01-16-175419_add_email_domain/: down.sql  up.sql
biogames-api/src/: config.rs  lib.rs  main.rs  models.rs  schema.rs  scoring.rs  service.rs
biogames-api/src/endpoints/: analytics.rs  check_game_type.rs  check_username.rs  create_game.rs  generate_user_id.rs  get_challenge_core.rs  get_current_challenge.rs  get_game.rs  get_her2_core_image.rs  get_leaderboard.rs  get_preview_core_id.rs  mod.rs  quit_game.rs  register_with_username.rs  store_email_hash.rs  submit_challenge.rs  validate_username.rs
biogames-client/: ._.gitignore  ._package-lock.json  .env.production  ecosystem.config.cjs  index.html  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.ts
biogames-client/src/: ._GamePage.tsx  ._Menu.tsx  ._declaration.d.ts  Auth.ts  CurrentChallengeResponse.ts  FullscreenResultDisplay.tsx  Game.ts  (+23 more)
