[package]
name = "biogames-api"
version = "0.1.0"
edition = "2021"

[features]
default = []
training_direct_entry = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sendmail = "2.0.0"
lazy_static = "1.4.0"
serde_json = "1.0"
axum = { version = "0.7" }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = "0.7.10"
once_cell = "1.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v7"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.59"
lettre = { version = "0.10.4", features = ["smtp-transport", "builder"] }
rand = "0.8.5"
sha2 = "0.10.8"
mime_guess = "2.0.5"
